--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,11 @@ ext {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
     implementation 'org.json:json:20210307'
     implementation 'io.swagger.core.v3:swagger-annotations:2.2.8'
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
